Remove use of apache StringUtils.